--- a/index.html
+++ b/index.html
@@ -25,9 +25,13 @@
                 </nav>
             </div> <!--topHeader-->
         <div class="mainContent">
-            <div class="logo">GOOGLE</div>
+            <div class="logo">Google
+                </div>
                 <form>
-                    <input class="mainSearch" type="text" />
+                    <div class="inputContainer">
+                        <input class="mainSearch" type="text" />
+                        <i class="material-icons">mic</i>
+                    </div>
                     <div class="buttonGroup">
                         <button type="submit">Google Search</button>
                         <button type="submit">I'm Feeling Lucky</button>
