--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
                 </nav>
             </div> <!--topHeader-->
         <div class="mainContent">
-            <div class="logo">Google
+            <div class="logo">
+                <span>G</span><span>o</span><span>o</span><span>g</span><span>l</span><span>e</span> <!--Same line to omit any whitespace-->
                 </div>
                 <form>
                     <div class="inputContainer">
